crates/weaveffi-cli/tests/snapshots/dotnet_shapes__README_md.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
<!-- Generated by WeaveFFI [VERSION] from api.yml -->
<!-- DO NOT EDIT. Your changes will be overwritten. -->
<!-- To regenerate: weaveffi generate api.yml -o <out> -->

# Shapes (.NET)

Native bindings for shapes

The `Shapes` namespace binds the `shapes` native library through
source-generated P/Invoke (`[LibraryImport]`), so it's trim- and
AOT-friendly.

## Build

```bash
dotnet build
```

Reference this project from yours (`dotnet add reference Shapes.csproj`)
or pack it (`dotnet pack -c Release`).

## Loading the native library

The bindings load `shapes` with the platform's normal rules
(`libshapes.dylib`, `libshapes.so`, or `shapes.dll` next to the app or on the
library search path). Set `SHAPES_LIBRARY` to a full path to load a
specific file instead.

<!-- END README.md -->
