crates/weaveffi-cli/tests/snapshots/dotnet_shapes__Shapes_cs.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
// Generated by WeaveFFI [VERSION] from api.yml
// DO NOT EDIT. Your changes will be overwritten.
// To regenerate: weaveffi generate api.yml -o <out>

#nullable enable

using System;
using System.Collections.Generic;
using System.Runtime.CompilerServices;
using System.Runtime.InteropServices;
using System.Threading;
using System.Threading.Tasks;

namespace Shapes;

/// <summary>An algebraic shape (sum type with associated data)</summary>
public abstract class Shape
{
    private Shape()
    {
    }

    /// <summary>The empty shape (a unit variant)</summary>
    public sealed class Empty : Shape
    {
    }

    /// <summary>A circle with a radius</summary>
    public sealed class Circle : Shape
    {
        /// <summary>Radius in points</summary>
        public double Radius { get; }

        /// <summary>Creates a <see cref="Circle"/> from every field.</summary>
        public Circle(double radius)
        {
            Radius = radius;
        }
    }

    /// <summary>An axis-aligned rectangle</summary>
    public sealed class Rectangle : Shape
    {
        public float Width { get; }

        public float Height { get; }

        /// <summary>Creates a <see cref="Rectangle"/> from every field.</summary>
        public Rectangle(float width, float height)
        {
            Width = width;
            Height = height;
        }
    }

    /// <summary>An integer-bounded shape (exercises narrow + wide ints)</summary>
    public sealed class Bounded : Shape
    {
        public short Min { get; }

        public short Max { get; }

        public ulong Weight { get; }

        /// <summary>Creates a <see cref="Bounded"/> from every field.</summary>
        public Bounded(short min, short max, ulong weight)
        {
            Min = min;
            Max = max;
            Weight = weight;
        }
    }

    /// <summary>A labeled shape with a small count</summary>
    public sealed class Labeled : Shape
    {
        public string Label { get; }

        public byte Count { get; }

        /// <summary>Creates a <see cref="Labeled"/> from every field.</summary>
        public Labeled(string label, byte count)
        {
            Label = label;
            Count = count;
        }
    }

    internal void WriteTo(FfiBufferWriter writer)
    {
        switch (this)
        {
            case Empty _:
                writer.WriteI32(0);
                break;
            case Circle v:
                writer.WriteI32(1);
                writer.WriteF64(v.Radius);
                break;
            case Rectangle v:
                writer.WriteI32(2);
                writer.WriteF32(v.Width);
                writer.WriteF32(v.Height);
                break;
            case Bounded v:
                writer.WriteI32(3);
                writer.WriteI16(v.Min);
                writer.WriteI16(v.Max);
                writer.WriteU64(v.Weight);
                break;
            case Labeled v:
                writer.WriteI32(4);
                writer.WriteString(v.Label);
                writer.WriteU8(v.Count);
                break;
            default:
                throw new InvalidOperationException("unknown Shape variant");
        }
    }

    internal static Shape ReadFrom(FfiBufferReader reader)
    {
        var tag = reader.ReadI32();
        switch (tag)
        {
            case 0:
            {
                return new Empty();
            }
            case 1:
            {
                var fRadius = reader.ReadF64();
                return new Circle(fRadius);
            }
            case 2:
            {
                var fWidth = reader.ReadF32();
                var fHeight = reader.ReadF32();
                return new Rectangle(fWidth, fHeight);
            }
            case 3:
            {
                var fMin = reader.ReadI16();
                var fMax = reader.ReadI16();
                var fWeight = reader.ReadU64();
                return new Bounded(fMin, fMax, fWeight);
            }
            case 4:
            {
                var fLabel = reader.ReadString();
                var fCount = reader.ReadU8();
                return new Labeled(fLabel, fCount);
            }
            default:
                throw new InvalidOperationException("malformed value buffer: unknown Shape tag " + tag);
        }
    }
}

/// <summary>A plain C-style enum (no payloads)</summary>
public enum Channel
{
    Red = 0,
    Green = 1,
    Blue = 2,
}

/// <summary>One field per supported numeric primitive</summary>
public sealed class Numerics
{
    public sbyte A { get; }

    public short B { get; }

    public int C { get; }

    public long D { get; }

    public byte E { get; }

    public ushort F { get; }

    public uint G { get; }

    public ulong H { get; }

    public float I { get; }

    public double J { get; }

    /// <summary>Creates a <see cref="Numerics"/> from every field.</summary>
    public Numerics(sbyte a, short b, int c, long d, byte e, ushort f, uint g, ulong h, float i, double j)
    {
        A = a;
        B = b;
        C = c;
        D = d;
        E = e;
        F = f;
        G = g;
        H = h;
        I = i;
        J = j;
    }

    internal void WriteTo(FfiBufferWriter writer)
    {
        writer.WriteI8(A);
        writer.WriteI16(B);
        writer.WriteI32(C);
        writer.WriteI64(D);
        writer.WriteU8(E);
        writer.WriteU16(F);
        writer.WriteU32(G);
        writer.WriteU64(H);
        writer.WriteF32(I);
        writer.WriteF64(J);
    }

    internal static Numerics ReadFrom(FfiBufferReader reader)
    {
        var fA = reader.ReadI8();
        var fB = reader.ReadI16();
        var fC = reader.ReadI32();
        var fD = reader.ReadI64();
        var fE = reader.ReadU8();
        var fF = reader.ReadU16();
        var fG = reader.ReadU32();
        var fH = reader.ReadU64();
        var fI = reader.ReadF32();
        var fJ = reader.ReadF64();
        return new Numerics(fA, fB, fC, fD, fE, fF, fG, fH, fI, fJ);
    }
}

/// <summary>Rich (algebraic) enums and the expanded numeric primitives.</summary>
public static unsafe class Shapes
{
    /// <summary>Render a shape to a string</summary>
    public static string Describe(Shape shape)
    {
        var shapeWriter = new FfiBufferWriter();
        shape.WriteTo(shapeWriter);
        var ffiErr = default(FfiError);
        nuint ffiOutLen = 0;
        fixed (byte* shapePtr = shapeWriter.Written)
        {
            var ffiResult = NativeMethods.shapes_shapes_describe(shapePtr, (nuint)shapeWriter.Length, &ffiOutLen, &ffiErr);
            if (ffiErr.Code != 0) throw Ffi.TakeError(&ffiErr, global::Shapes.NativeException.FromError);
            return Ffi.TakeString(ffiResult, ffiOutLen);
        }
    }

    /// <summary>Scale a shape by a factor, returning a new shape</summary>
    public static Shape Scale(Shape shape, double factor)
    {
        var shapeWriter = new FfiBufferWriter();
        shape.WriteTo(shapeWriter);
        var ffiErr = default(FfiError);
        nuint ffiOutLen = 0;
        fixed (byte* shapePtr = shapeWriter.Written)
        {
            var ffiResult = NativeMethods.shapes_shapes_scale(shapePtr, (nuint)shapeWriter.Length, factor, &ffiOutLen, &ffiErr);
            if (ffiErr.Code != 0) throw Ffi.TakeError(&ffiErr, global::Shapes.NativeException.FromError);
            var ffiDecodedReader = Ffi.TakeBuffer(ffiResult, ffiOutLen);
            var ffiDecoded = global::Shapes.Shape.ReadFrom(ffiDecodedReader);
            ffiDecodedReader.ExpectEnd();
            return ffiDecoded;
        }
    }

    /// <summary>Sum a list of bytes into a wide integer (numerics smoke)</summary>
    public static ulong SumBytes(ReadOnlySpan<byte> values)
    {
        var ffiErr = default(FfiError);
        fixed (byte* valuesPtr = values)
        {
            var ffiResult = NativeMethods.shapes_shapes_sum_bytes(valuesPtr, (nuint)values.Length, &ffiErr);
            if (ffiErr.Code != 0) throw Ffi.TakeError(&ffiErr, global::Shapes.NativeException.FromError);
            return ffiResult;
        }
    }

    /// <summary>Sum a list of bytes into a wide integer (numerics smoke)</summary>
    public static ulong SumBytes(byte[] values) => SumBytes((ReadOnlySpan<byte>)values);

    /// <summary>Build a Numerics struct from every numeric primitive</summary>
    public static Numerics MakeNumerics(sbyte a, short b, int c, long d, byte e, ushort f, uint g, ulong h, float i, double j)
    {
        var ffiErr = default(FfiError);
        nuint ffiOutLen = 0;
        var ffiResult = NativeMethods.shapes_shapes_make_numerics(a, b, c, d, e, f, g, h, i, j, &ffiOutLen, &ffiErr);
        if (ffiErr.Code != 0) throw Ffi.TakeError(&ffiErr, global::Shapes.NativeException.FromError);
        var ffiDecodedReader = Ffi.TakeBuffer(ffiResult, ffiOutLen);
        var ffiDecoded = global::Shapes.Numerics.ReadFrom(ffiDecodedReader);
        ffiDecodedReader.ExpectEnd();
        return ffiDecoded;
    }
}

internal static unsafe partial class NativeMethods
{
    static partial void VerifyChecksums()
    {
        VerifyChecksum("shapes", &shapes_shapes_checksum, 0x06acf433ffa2a0f0UL);
    }

    [LibraryImport(LibName, EntryPoint = "shapes_shapes_checksum")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial ulong shapes_shapes_checksum();

    [LibraryImport(LibName, EntryPoint = "shapes_shapes_describe")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial byte* shapes_shapes_describe(byte* shape_ptr, nuint shape_len, nuint* out_len, FfiError* out_err);

    [LibraryImport(LibName, EntryPoint = "shapes_shapes_scale")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial byte* shapes_shapes_scale(byte* shape_ptr, nuint shape_len, double factor, nuint* out_len, FfiError* out_err);

    [LibraryImport(LibName, EntryPoint = "shapes_shapes_sum_bytes")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial ulong shapes_shapes_sum_bytes(byte* values_ptr, nuint values_len, FfiError* out_err);

    [LibraryImport(LibName, EntryPoint = "shapes_shapes_make_numerics")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial byte* shapes_shapes_make_numerics(sbyte a, short b, int c, long d, byte e, ushort f, uint g, ulong h, float i, double j, nuint* out_len, FfiError* out_err);
}

// END Shapes.cs
