crates/weaveffi-cli/tests/snapshots/dotnet_shapes__Shapes_csproj.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
<!-- Generated by WeaveFFI [VERSION] from api.yml -->
<!-- DO NOT EDIT. Your changes will be overwritten. -->
<!-- To regenerate: weaveffi generate api.yml -o <out> -->

<Project Sdk="Microsoft.NET.Sdk">

  <PropertyGroup>
    <TargetFramework>net8.0</TargetFramework>
    <AssemblyName>Shapes</AssemblyName>
    <RootNamespace>Shapes</RootNamespace>
    <PackageId>Shapes</PackageId>
    <Version>0.1.0</Version>
    <Description>Native bindings for shapes</Description>
    <Nullable>enable</Nullable>
    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
    <IsAotCompatible>true</IsAotCompatible>
    <!-- The bindings themselves reference the API's deprecated items. -->
    <NoWarn>$(NoWarn);CS0618</NoWarn>
  </PropertyGroup>

</Project>

<!-- END Shapes.csproj -->
