crates/weaveffi-cli/tests/snapshots/dotnet_shapes__WeaveFFI_cs.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
// Generated by WeaveFFI [VERSION] from weaveffi.yml
// DO NOT EDIT. Your changes will be overwritten.
// To regenerate: weaveffi generate weaveffi.yml -o <out>

#nullable enable

using System;
using System.Collections.Generic;
using System.Runtime.InteropServices;

namespace WeaveFFI
{
    public class WeaveFFIException : Exception
    {
        public int Code { get; }

        public WeaveFFIException(int code, string message) : base(message)
        {
            Code = code;
        }
    }

    [StructLayout(LayoutKind.Sequential)]
    internal struct WeaveFFIError
    {
        public int Code;
        public IntPtr Message;
        public IntPtr PayloadPtr;
        public UIntPtr PayloadLen;

        internal static byte[]? CopyPayload(WeaveFFIError err)
        {
            if (err.PayloadPtr == IntPtr.Zero || (int)err.PayloadLen == 0)
            {
                return null;
            }
            var payload = new byte[(int)err.PayloadLen];
            Marshal.Copy(err.PayloadPtr, payload, 0, (int)err.PayloadLen);
            return payload;
        }

        internal static void Check(WeaveFFIError err)
        {
            if (err.Code != 0)
            {
                var code = err.Code;
                var msg = Marshal.PtrToStringUTF8(err.Message) ?? "";
                NativeMethods.weaveffi_error_clear(ref err);
                throw new WeaveFFIException(code, msg);
            }
        }
    }

    internal static class WeaveFFIHelpers
    {
        internal static IntPtr StringToPtr(string? s)
        {
            return s == null ? IntPtr.Zero : Marshal.StringToCoTaskMemUTF8(s);
        }

        internal static string? PtrToString(IntPtr ptr)
        {
            return ptr == IntPtr.Zero ? null : Marshal.PtrToStringUTF8(ptr);
        }

        internal static void FreePtr(IntPtr ptr)
        {
            Marshal.FreeCoTaskMem(ptr);
        }
    }

    /// <summary>Serializes values into the WeaveFFI value-buffer wire
    /// format (little-endian, packed).</summary>
    internal sealed class WeaveFFIBufferWriter
    {
        private byte[] _buf = new byte[64];
        private int _len;

        private void Ensure(int extra)
        {
            if (_len + extra <= _buf.Length)
            {
                return;
            }
            var size = _buf.Length * 2;
            while (size < _len + extra)
            {
                size *= 2;
            }
            Array.Resize(ref _buf, size);
        }

        internal void WriteBool(bool v)
        {
            Ensure(1);
            _buf[_len++] = v ? (byte)1 : (byte)0;
        }

        internal void WriteI8(sbyte v)
        {
            Ensure(1);
            _buf[_len++] = (byte)v;
        }

        internal void WriteU8(byte v)
        {
            Ensure(1);
            _buf[_len++] = v;
        }

        internal void WriteU16(ushort v)
        {
            Ensure(2);
            _buf[_len++] = (byte)v;
            _buf[_len++] = (byte)(v >> 8);
        }

        internal void WriteI16(short v)
        {
            WriteU16((ushort)v);
        }

        internal void WriteU32(uint v)
        {
            Ensure(4);
            _buf[_len++] = (byte)v;
            _buf[_len++] = (byte)(v >> 8);
            _buf[_len++] = (byte)(v >> 16);
            _buf[_len++] = (byte)(v >> 24);
        }

        internal void WriteI32(int v)
        {
            WriteU32((uint)v);
        }

        internal void WriteU64(ulong v)
        {
            WriteU32((uint)v);
            WriteU32((uint)(v >> 32));
        }

        internal void WriteI64(long v)
        {
            WriteU64((ulong)v);
        }

        internal void WriteF32(float v)
        {
            WriteU32((uint)BitConverter.SingleToInt32Bits(v));
        }

        internal void WriteF64(double v)
        {
            WriteU64((ulong)BitConverter.DoubleToInt64Bits(v));
        }

        internal void WriteLen(int len)
        {
            WriteU32((uint)len);
        }

        internal void WriteOptionFlag(bool present)
        {
            WriteBool(present);
        }

        internal void WriteString(string v)
        {
            var bytes = System.Text.Encoding.UTF8.GetBytes(v);
            WriteLen(bytes.Length);
            Ensure(bytes.Length);
            Array.Copy(bytes, 0, _buf, _len, bytes.Length);
            _len += bytes.Length;
        }

        internal void WriteBytes(byte[] v)
        {
            WriteLen(v.Length);
            Ensure(v.Length);
            Array.Copy(v, 0, _buf, _len, v.Length);
            _len += v.Length;
        }

        internal byte[] ToArray()
        {
            var outBuf = new byte[_len];
            Array.Copy(_buf, outBuf, _len);
            return outBuf;
        }
    }

    /// <summary>Decodes values from the WeaveFFI value-buffer wire format.
    /// A malformed buffer indicates a producer/consumer contract violation and
    /// throws <see cref="InvalidOperationException"/>.</summary>
    internal sealed class WeaveFFIBufferReader
    {
        private static readonly System.Text.Encoding Utf8Strict =
            new System.Text.UTF8Encoding(false, true);

        private readonly byte[] _data;
        private int _pos;

        internal WeaveFFIBufferReader(byte[] data)
        {
            _data = data;
        }

        private void Require(int n)
        {
            if (_data.Length - _pos < n)
            {
                throw new InvalidOperationException("malformed WeaveFFI value buffer: buffer exhausted");
            }
        }

        internal bool ReadBool()
        {
            Require(1);
            var b = _data[_pos++];
            if (b > 1)
            {
                throw new InvalidOperationException("malformed WeaveFFI value buffer: invalid bool byte");
            }
            return b == 1;
        }

        internal sbyte ReadI8()
        {
            Require(1);
            return (sbyte)_data[_pos++];
        }

        internal byte ReadU8()
        {
            Require(1);
            return _data[_pos++];
        }

        internal ushort ReadU16()
        {
            Require(2);
            var v = (ushort)(_data[_pos] | (_data[_pos + 1] << 8));
            _pos += 2;
            return v;
        }

        internal short ReadI16()
        {
            return (short)ReadU16();
        }

        internal uint ReadU32()
        {
            Require(4);
            var v = (uint)_data[_pos]
                | ((uint)_data[_pos + 1] << 8)
                | ((uint)_data[_pos + 2] << 16)
                | ((uint)_data[_pos + 3] << 24);
            _pos += 4;
            return v;
        }

        internal int ReadI32()
        {
            return (int)ReadU32();
        }

        internal ulong ReadU64()
        {
            var lo = (ulong)ReadU32();
            var hi = (ulong)ReadU32();
            return lo | (hi << 32);
        }

        internal long ReadI64()
        {
            return (long)ReadU64();
        }

        internal float ReadF32()
        {
            return BitConverter.Int32BitsToSingle(ReadI32());
        }

        internal double ReadF64()
        {
            return BitConverter.Int64BitsToDouble(ReadI64());
        }

        internal int ReadLen()
        {
            var len = ReadU32();
            if (len > (uint)(_data.Length - _pos))
            {
                throw new InvalidOperationException("malformed WeaveFFI value buffer: length prefix exceeds remaining bytes");
            }
            return (int)len;
        }

        internal bool ReadOptionFlag()
        {
            return ReadBool();
        }

        internal string ReadString()
        {
            var len = ReadLen();
            string s;
            try
            {
                s = Utf8Strict.GetString(_data, _pos, len);
            }
            catch (ArgumentException)
            {
                throw new InvalidOperationException("malformed WeaveFFI value buffer: string is not valid UTF-8");
            }
            _pos += len;
            return s;
        }

        internal byte[] ReadBytes()
        {
            var len = ReadLen();
            var outBuf = new byte[len];
            Array.Copy(_data, _pos, outBuf, 0, len);
            _pos += len;
            return outBuf;
        }

        internal void ExpectEnd()
        {
            if (_pos != _data.Length)
            {
                throw new InvalidOperationException("malformed WeaveFFI value buffer: trailing bytes");
            }
        }
    }

    /// <summary>An algebraic shape (sum type with associated data)</summary>
    public abstract class Shape
    {
        private Shape()
        {
        }

        /// <summary>The empty shape (a unit variant)</summary>
        public sealed class Empty : Shape
        {
        }

        /// <summary>A circle with a radius</summary>
        public sealed class Circle : Shape
        {
            /// <summary>Radius in points</summary>
            public double Radius { get; }

            public Circle(double radius)
            {
                Radius = radius;
            }
        }

        /// <summary>An axis-aligned rectangle</summary>
        public sealed class Rectangle : Shape
        {
            public float Width { get; }

            public float Height { get; }

            public Rectangle(float width, float height)
            {
                Width = width;
                Height = height;
            }
        }

        /// <summary>An integer-bounded shape (exercises narrow + wide ints)</summary>
        public sealed class Bounded : Shape
        {
            public short Min { get; }

            public short Max { get; }

            public ulong Weight { get; }

            public Bounded(short min, short max, ulong weight)
            {
                Min = min;
                Max = max;
                Weight = weight;
            }
        }

        /// <summary>A labeled shape with a small count</summary>
        public sealed class Labeled : Shape
        {
            public string Label { get; }

            public byte Count { get; }

            public Labeled(string label, byte count)
            {
                Label = label;
                Count = count;
            }
        }

        internal void WriteTo(WeaveFFIBufferWriter writer)
        {
            switch (this)
            {
                case Empty _:
                    writer.WriteI32(0);
                    break;
                case Circle v:
                    writer.WriteI32(1);
                    writer.WriteF64(v.Radius);
                    break;
                case Rectangle v:
                    writer.WriteI32(2);
                    writer.WriteF32(v.Width);
                    writer.WriteF32(v.Height);
                    break;
                case Bounded v:
                    writer.WriteI32(3);
                    writer.WriteI16(v.Min);
                    writer.WriteI16(v.Max);
                    writer.WriteU64(v.Weight);
                    break;
                case Labeled v:
                    writer.WriteI32(4);
                    writer.WriteString(v.Label);
                    writer.WriteU8(v.Count);
                    break;
                default:
                    throw new InvalidOperationException("unknown Shape variant");
            }
        }

        internal static Shape ReadFrom(WeaveFFIBufferReader reader)
        {
            var tag = reader.ReadI32();
            switch (tag)
            {
                case 0:
                    return new Empty();
                case 1:
                {
                    var fRadius = reader.ReadF64();
                    return new Circle(fRadius);
                }
                case 2:
                {
                    var fWidth = reader.ReadF32();
                    var fHeight = reader.ReadF32();
                    return new Rectangle(fWidth, fHeight);
                }
                case 3:
                {
                    var fMin = reader.ReadI16();
                    var fMax = reader.ReadI16();
                    var fWeight = reader.ReadU64();
                    return new Bounded(fMin, fMax, fWeight);
                }
                case 4:
                {
                    var fLabel = reader.ReadString();
                    var fCount = reader.ReadU8();
                    return new Labeled(fLabel, fCount);
                }
                default:
                    throw new InvalidOperationException("malformed WeaveFFI value buffer: unknown Shape tag " + tag);
            }
        }
    }

    /// <summary>A plain C-style enum (no payloads)</summary>
    public enum Channel
    {
        Red = 0,
        Green = 1,
        Blue = 2,
    }

    /// <summary>One field per supported numeric primitive</summary>
    public sealed class Numerics
    {
        public sbyte A { get; }

        public short B { get; }

        public int C { get; }

        public long D { get; }

        public byte E { get; }

        public ushort F { get; }

        public uint G { get; }

        public ulong H { get; }

        public float I { get; }

        public double J { get; }

        public Numerics(sbyte a, short b, int c, long d, byte e, ushort f, uint g, ulong h, float i, double j)
        {
            A = a;
            B = b;
            C = c;
            D = d;
            E = e;
            F = f;
            G = g;
            H = h;
            I = i;
            J = j;
        }

        internal void WriteTo(WeaveFFIBufferWriter writer)
        {
            writer.WriteI8(A);
            writer.WriteI16(B);
            writer.WriteI32(C);
            writer.WriteI64(D);
            writer.WriteU8(E);
            writer.WriteU16(F);
            writer.WriteU32(G);
            writer.WriteU64(H);
            writer.WriteF32(I);
            writer.WriteF64(J);
        }

        internal static Numerics ReadFrom(WeaveFFIBufferReader reader)
        {
            var fA = reader.ReadI8();
            var fB = reader.ReadI16();
            var fC = reader.ReadI32();
            var fD = reader.ReadI64();
            var fE = reader.ReadU8();
            var fF = reader.ReadU16();
            var fG = reader.ReadU32();
            var fH = reader.ReadU64();
            var fI = reader.ReadF32();
            var fJ = reader.ReadF64();
            return new Numerics(fA, fB, fC, fD, fE, fF, fG, fH, fI, fJ);
        }
    }

    internal static class NativeMethods
    {
        private const string LibName = "weaveffi";

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void weaveffi_free_string(IntPtr ptr);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void weaveffi_free_bytes(IntPtr ptr, UIntPtr len);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void weaveffi_error_clear(ref WeaveFFIError err);

        [DllImport(LibName, EntryPoint = "weaveffi_shapes_describe", CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr weaveffi_shapes_describe(IntPtr shape_ptr, UIntPtr shape_len, ref WeaveFFIError err);

        [DllImport(LibName, EntryPoint = "weaveffi_shapes_scale", CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr weaveffi_shapes_scale(IntPtr shape_ptr, UIntPtr shape_len, double factor, out UIntPtr out_len, ref WeaveFFIError err);

        [DllImport(LibName, EntryPoint = "weaveffi_shapes_sum_bytes", CallingConvention = CallingConvention.Cdecl)]
        internal static extern ulong weaveffi_shapes_sum_bytes(IntPtr values_ptr, UIntPtr values_len, ref WeaveFFIError err);

        [DllImport(LibName, EntryPoint = "weaveffi_shapes_make_numerics", CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr weaveffi_shapes_make_numerics(sbyte a, short b, int c, long d, byte e, ushort f, uint g, ulong h, float i, double j, out UIntPtr out_len, ref WeaveFFIError err);

    }

    public static class Shapes
    {
        /// <summary>Render a shape to a string</summary>
        public static string Describe(Shape shape)
        {
            var err = new WeaveFFIError();
            var shapeWriter = new WeaveFFIBufferWriter();
            shape.WriteTo(shapeWriter);
            var shapeBuf = shapeWriter.ToArray();
            var shapePin = GCHandle.Alloc(shapeBuf, GCHandleType.Pinned);
            try
            {
                var result = NativeMethods.weaveffi_shapes_describe(shapePin.AddrOfPinnedObject(), (UIntPtr)shapeBuf.Length, ref err);
                WeaveFFIError.Check(err);
                var str = Marshal.PtrToStringUTF8(result);
                NativeMethods.weaveffi_free_string(result);
                return str ?? "";
            }
            finally
            {
                shapePin.Free();
            }
        }

        /// <summary>Scale a shape by a factor, returning a new shape</summary>
        public static Shape Scale(Shape shape, double factor)
        {
            var err = new WeaveFFIError();
            var shapeWriter = new WeaveFFIBufferWriter();
            shape.WriteTo(shapeWriter);
            var shapeBuf = shapeWriter.ToArray();
            var shapePin = GCHandle.Alloc(shapeBuf, GCHandleType.Pinned);
            try
            {
                var result = NativeMethods.weaveffi_shapes_scale(shapePin.AddrOfPinnedObject(), (UIntPtr)shapeBuf.Length, factor, out var outLen, ref err);
                WeaveFFIError.Check(err);
                var resultBuf = new byte[(int)outLen];
                if (result != IntPtr.Zero && (int)outLen > 0) Marshal.Copy(result, resultBuf, 0, (int)outLen);
                NativeMethods.weaveffi_free_bytes(result, outLen);
                var valueReader = new WeaveFFIBufferReader(resultBuf);
                var value = Shape.ReadFrom(valueReader);
                valueReader.ExpectEnd();
                return value;
            }
            finally
            {
                shapePin.Free();
            }
        }

        /// <summary>Sum a list of bytes into a wide integer (numerics smoke)</summary>
        public static ulong SumBytes(byte[] values)
        {
            var err = new WeaveFFIError();
            var valuesPin = GCHandle.Alloc(values, GCHandleType.Pinned);
            try
            {
                var result = NativeMethods.weaveffi_shapes_sum_bytes(valuesPin.AddrOfPinnedObject(), (UIntPtr)values.Length, ref err);
                WeaveFFIError.Check(err);
                return result;
            }
            finally
            {
                valuesPin.Free();
            }
        }

        /// <summary>Build a Numerics struct from every numeric primitive</summary>
        public static Numerics MakeNumerics(sbyte a, short b, int c, long d, byte e, ushort f, uint g, ulong h, float i, double j)
        {
            var err = new WeaveFFIError();
            var result = NativeMethods.weaveffi_shapes_make_numerics(a, b, c, d, e, f, g, h, i, j, out var outLen, ref err);
            WeaveFFIError.Check(err);
            var resultBuf = new byte[(int)outLen];
            if (result != IntPtr.Zero && (int)outLen > 0) Marshal.Copy(result, resultBuf, 0, (int)outLen);
            NativeMethods.weaveffi_free_bytes(result, outLen);
            var valueReader = new WeaveFFIBufferReader(resultBuf);
            var value = Numerics.ReadFrom(valueReader);
            valueReader.ExpectEnd();
            return value;
        }

    }

}

// END WeaveFFI.cs
