crates/weaveffi-cli/tests/snapshots/dotnet_shapes__WeaveFFI_csproj.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
<!-- Generated by WeaveFFI [VERSION] from weaveffi.yml -->
<!-- DO NOT EDIT — your changes will be overwritten. -->
<!-- To regenerate: weaveffi generate weaveffi.yml -o <out> -->

<Project Sdk="Microsoft.NET.Sdk">

  <PropertyGroup>
    <TargetFramework>net8.0</TargetFramework>
    <PackageId>WeaveFFI</PackageId>
    <Version>0.1.0</Version>
    <Description>WeaveFFI bindings generated by WeaveFFI</Description>
    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
  </PropertyGroup>

</Project>

<!-- END WeaveFFI.csproj -->
